// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`modal > renders open custom size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`modal > renders with custom classNames 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`modal > renders with default Props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_0_"
      aria-haspopup="dialog"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`modal > renders with default Props and function children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`modal > renders with default Props and function children open 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`modal > renders with disclosure 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="modal-test"
      aria-haspopup="dialog"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`modal > renders with disclosure and onBeforeClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="modal-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open modal
    </button>
  </div>
</DocumentFragment>
`;

exports[`modal > renders with disclosure and onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="modal-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open modal
    </button>
  </div>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translateY(+100%);
    -moz-transform: translateY(+100%);
    -ms-transform: translateY(+100%);
    transform: translateY(+100%);
  }

  100% {
    -webkit-transform: translateY(0%);
    -moz-transform: translateY(0%);
    -ms-transform: translateY(0%);
    transform: translateY(0%);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translateY(+100%);
    -moz-transform: translateY(+100%);
    -ms-transform: translateY(+100%);
    transform: translateY(+100%);
  }

  100% {
    -webkit-transform: translateY(0%);
    -moz-transform: translateY(0%);
    -ms-transform: translateY(0%);
    transform: translateY(0%);
  }
}

.emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
  background-color: #464959a6;
  z-index: 1;
  opacity: 0;
}

.emotion-0[data-open='true'] {
  padding: 1rem;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.emotion-0[data-visible='true'] {
  opacity: 1;
}

.emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
  background-color: #464959a6;
  z-index: 1;
  opacity: 0;
}

.emotion-0[data-open='true'] {
  padding: 1rem;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.emotion-0[data-visible='true'] {
  opacity: 1;
}

.emotion-2 {
  background-color: #ffffff;
  position: relative;
  border-radius: 0.25rem;
  border: 0;
  padding: 1.5rem;
  width: 44.25rem;
  box-shadow: 0px 12px 24px 0px #2226383d,0px 8px 60px 0px #22263852;
  -webkit-transition: width 0.3s ease-in-out,-webkit-transform 0.3s ease-in-out;
  transition: width 0.3s ease-in-out,transform 0.3s ease-in-out;
}

.emotion-2[data-size="large"] {
  width: 53.125rem;
}

.emotion-2[data-size="medium"] {
  width: 44.25rem;
}

.emotion-2[data-size="small"] {
  width: 38.5rem;
}

.emotion-2[data-size="xsmall"] {
  width: 25rem;
}

.emotion-2[data-size="xxsmall"] {
  width: 22.5rem;
}

.emotion-2[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.emotion-2[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.emotion-2[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.emotion-2[data-placement="center"] {
  margin: auto;
}

.emotion-2[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.emotion-2[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.emotion-2[data-placement="top"] {
  margin: auto;
  margin-top: 0;
}

.emotion-2[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.emotion-2[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

.emotion-2[data-has-image='true'] {
  padding: 0;
}

.emotion-2[data-animation='true'] {
  -webkit-animation: animation-0 0.3s ease-in-out forwards;
  animation: animation-0 0.3s ease-in-out forwards;
}

.emotion-2 {
  background-color: #ffffff;
  position: relative;
  border-radius: 0.25rem;
  border: 0;
  padding: 1.5rem;
  width: 44.25rem;
  box-shadow: 0px 12px 24px 0px #2226383d,0px 8px 60px 0px #22263852;
  -webkit-transition: width 0.3s ease-in-out,-webkit-transform 0.3s ease-in-out;
  transition: width 0.3s ease-in-out,transform 0.3s ease-in-out;
}

.emotion-2[data-size="large"] {
  width: 53.125rem;
}

.emotion-2[data-size="medium"] {
  width: 44.25rem;
}

.emotion-2[data-size="small"] {
  width: 38.5rem;
}

.emotion-2[data-size="xsmall"] {
  width: 25rem;
}

.emotion-2[data-size="xxsmall"] {
  width: 22.5rem;
}

.emotion-2[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.emotion-2[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.emotion-2[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.emotion-2[data-placement="center"] {
  margin: auto;
}

.emotion-2[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.emotion-2[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.emotion-2[data-placement="top"] {
  margin: auto;
  margin-top: 0;
}

.emotion-2[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.emotion-2[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

.emotion-2[data-has-image='true'] {
  padding: 0;
}

.emotion-2[data-animation='true'] {
  -webkit-animation: animation-0 0.3s ease-in-out forwards;
  animation: animation-0 0.3s ease-in-out forwards;
}

.emotion-4 {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.emotion-4 {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

<div>
    <div
      class="emotion-0 emotion-1"
      data-animation="false"
      data-open="true"
      data-testid="test-backdrop"
      data-visible="true"
    >
      <dialog
        aria-label="modal-test"
        aria-modal="true"
        class="emotion-2 emotion-3"
        data-animation="false"
        data-has-image="false"
        data-placement="center"
        data-size="small"
        data-testid="test"
        id="modal-test"
        open=""
        tabindex="0"
      >
        <div>
          modal
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          <button
            aria-label="close"
            class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
            data-testid="test-close-button"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
        </div>
      </dialog>
    </div>
  </div>
</DocumentFragment>
`;

exports[`modal > renders with image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`modal > renders with open={true} 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`modal > renders with open={true} and no close icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`modal > renders without disclosure 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;
